# aiommgpio

./: LICENSE  README.md  REDME.md  assembly_sample.S  pyproject.toml  setup.py
aiommgpio/: __init__.py
src/aiommgpio/: RPiMMIO.py  __init__.py  constants.py  example.py
