[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiommgpio"
version = "1.0.0"
authors = [
    { name="Park Jongheum", email="parkjh0821@gmail.com" },
]
description = "MMAP based GPIO & PWM for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Hardware"
]

[project.urls]
"Homepage" = "https://github.com/whdgmawkd/aiommgpio"
